refactor: modernize the code a bit