@@ -20,19 +20,19 @@ import org.junit.jupiter.api.Test;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Properties;
 
 import static com.github.stefanbirkner.systemlambda.SystemLambda.*;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class CliTest {
     @Test
-    void testDummy() throws Exception {
+    void dummy() throws Exception {
         Cli cli = new Cli();
 
         ByteArrayOutputStream std = new ByteArrayOutputStream();
@@ -41,13 +41,13 @@ class CliTest {
         cli.setErrOutputStream(err);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] {}));
-        assertEquals(1, statusCode);
-        assertEquals("", std.toString());
-        assertTrue(err.toString().startsWith("Error: FILE_OR_DIR is required"));
+        assertThat(statusCode).isEqualTo(1);
+        assertThat(std.toString()).isEqualTo("");
+        assertThat(err.toString().startsWith("Error: FILE_OR_DIR is required")).isTrue();
     }
 
     @Test
-    void testSetStdOutputStream() throws Exception {
+    void setStdOutputStream() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "cli1.yml";
 
         Cli cli = new Cli();
@@ -56,43 +56,42 @@ class CliTest {
         cli.setStdOutputStream(std);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] { path }));
-        assertEquals(1, statusCode);
-        assertEquals(path + System.lineSeparator() +
-                        "  2:8       warning  too few spaces before comment  (comments)" + System.lineSeparator() +
-                        "  3:16      error    syntax error: mapping values are not allowed here" + System.lineSeparator() +
-                        "                     mapping values are not allowed here" + System.lineSeparator() +
-                        "                      in 'reader', line 3, column 16:" + System.lineSeparator() +
-                        "                         - invalid: yaml:" + System.lineSeparator() +
-                        "                                        ^" + System.lineSeparator() + System.lineSeparator(),
-                std.toString());
+        assertThat(statusCode).isEqualTo(1);
+        assertThat(std.toString()).isEqualTo(path + System.lineSeparator() +
+                "  2:8       warning  too few spaces before comment  (comments)" + System.lineSeparator() +
+                "  3:16      error    syntax error: mapping values are not allowed here" + System.lineSeparator() +
+                "                     mapping values are not allowed here" + System.lineSeparator() +
+                "                      in 'reader', line 3, column 16:" + System.lineSeparator() +
+                "                         - invalid: yaml:" + System.lineSeparator() +
+                "                                        ^" + System.lineSeparator() + System.lineSeparator());
     }
 
     @Test
-    void testSetErrOutputStream() throws Exception {
+    void setErrOutputStream() throws Exception {
         Cli cli = new Cli();
 
         ByteArrayOutputStream err = new ByteArrayOutputStream();
         cli.setErrOutputStream(err);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-s" }));
-        assertEquals(1, statusCode);
-        assertTrue(err.toString().contains("Error: FILE_OR_DIR is required"));
+        assertThat(statusCode).isEqualTo(1);
+        assertThat(err.toString().contains("Error: FILE_OR_DIR is required")).isTrue();
     }
 
     @Test
-    void testWrongOutputFormat() throws Exception {
+    void wrongOutputFormat() throws Exception {
         Cli cli = new Cli();
 
         ByteArrayOutputStream err = new ByteArrayOutputStream();
         cli.setErrOutputStream(err);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-f", "foo" }));
-        assertEquals(1, statusCode);
-        assertTrue(err.toString().contains("Error: invalid output format"));
+        assertThat(statusCode).isEqualTo(1);
+        assertThat(err.toString().contains("Error: invalid output format")).isTrue();
     }
 
     @Test
-    void testRecursive() throws Exception {
+    void recursive() throws Exception {
         String dirPath = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "recursive";
         String path1 = dirPath + File.separator + "cli2.yml";
         String path2 = dirPath + File.separator + "sub" + File.separator + "cli3.yaml";
@@ -103,15 +102,13 @@ class CliTest {
         cli.setStdOutputStream(std);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-f", "parsable", dirPath }));
-        assertEquals(0, statusCode);
-        assertEquals(
-                new HashSet<>(Arrays.asList(path1 + ":2:8:comments:warning:too few spaces before comment",
-                        path2 + ":1:1:document-start:warning:missing document start \"---\"")),
-                new HashSet<>(Arrays.asList(std.toString().trim().split(System.lineSeparator()))));
+        assertThat(statusCode).isEqualTo(0);
+        assertThat(new HashSet<>(Arrays.asList(std.toString().trim().split(System.lineSeparator())))).isEqualTo(new HashSet<>(Arrays.asList(path1 + ":2:8:comments:warning:too few spaces before comment",
+                path2 + ":1:1:document-start:warning:missing document start \"---\"")));
     }
 
     @Test
-    void testStrict() throws Exception {
+    void strict() throws Exception {
         final String dirPath = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "recursive" + File.separator + "sub";
         final String path = dirPath + File.separator + "cli3.yaml";
 
@@ -121,14 +118,12 @@ class CliTest {
         cli.setStdOutputStream(std);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-s", "-f", "parsable", dirPath }));
-        assertEquals(2, statusCode);
-        assertEquals(
-                path + ":1:1:document-start:warning:missing document start \"---\"" + System.lineSeparator(),
-                std.toString());
+        assertThat(statusCode).isEqualTo(2);
+        assertThat(std.toString()).isEqualTo(path + ":1:1:document-start:warning:missing document start \"---\"" + System.lineSeparator());
     }
 
     @Test
-    void testNoWarnings() throws Exception {
+    void noWarnings() throws Exception {
         final String dirPath = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "recursive" + File.separator + "sub";
 
         Cli cli = new Cli();
@@ -137,24 +132,24 @@ class CliTest {
         cli.setStdOutputStream(std);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-s", "-f", "parsable", "--no-warnings", dirPath }));
-        assertEquals(0, statusCode);
-        assertEquals("", std.toString());
+        assertThat(statusCode).isEqualTo(0);
+        assertThat(std.toString()).isEqualTo("");
     }
 
     @Test
-    void testWrongConfiguration() throws Exception {
+    void wrongConfiguration() throws Exception {
         Cli cli = new Cli();
 
         ByteArrayOutputStream err = new ByteArrayOutputStream();
         cli.setErrOutputStream(err);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-d", "\"foo: bar: error\"", "foo.yml" }));
-        assertEquals(1, statusCode);
-        assertTrue(err.toString().contains("Error: cannot get or process configuration"));
+        assertThat(statusCode).isEqualTo(1);
+        assertThat(err.toString().contains("Error: cannot get or process configuration")).isTrue();
     }
 
     @Test
-    void testShowHelpShort() throws Exception {
+    void showHelpShort() throws Exception {
         Cli cli = new Cli();
 
         ByteArrayOutputStream std = new ByteArrayOutputStream();
@@ -163,18 +158,18 @@ class CliTest {
         cli.setErrOutputStream(err);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-h" }));
-        assertEquals(0, statusCode);
-        assertTrue(std.toString().contains("A linter for YAML files"));
-        assertEquals("", err.toString());
+        assertThat(statusCode).isEqualTo(0);
+        assertThat(std.toString().contains("A linter for YAML files")).isTrue();
+        assertThat(err.toString()).isEqualTo("");
     }
 
     @Test
-    void testShowVersion1() throws Exception {
+    void showVersion1() throws Exception {
         testShowVersion("--version");
     }
 
     @Test
-    void testShowVersion2() throws Exception {
+    void showVersion2() throws Exception {
         testShowVersion("-v");
     }
 
@@ -189,24 +184,24 @@ class CliTest {
         props.load(cli.getClass().getClassLoader().getResourceAsStream("yaml.properties"));
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] { option }));
-        assertEquals(0, statusCode);
-        assertEquals(Cli.APP_NAME + " " + props.getProperty("version") + System.lineSeparator(), err.toString());
+        assertThat(statusCode).isEqualTo(0);
+        assertThat(err.toString()).isEqualTo(Cli.APP_NAME + " " + props.getProperty("version") + System.lineSeparator());
     }
 
     @Test
-    void testMutuallyExcludedOptions() throws Exception {
+    void mutuallyExcludedOptions() throws Exception {
         Cli cli = new Cli();
 
         ByteArrayOutputStream err = new ByteArrayOutputStream();
         cli.setErrOutputStream(err);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-c", "conf.yaml", "-d", "\"---\"" }));
-        assertEquals(1, statusCode);
-        assertTrue(err.toString().contains("Error: options `c' and `d' are mutually exclusive."));
+        assertThat(statusCode).isEqualTo(1);
+        assertThat(err.toString().contains("Error: options `c' and `d' are mutually exclusive.")).isTrue();
     }
 
     @Test
-    void testConfData1() throws Exception {
+    void confData1() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "cli5.yml";
 
         Cli cli = new Cli();
@@ -215,14 +210,12 @@ class CliTest {
         cli.setStdOutputStream(std);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-d", "relaxed", "-f", "parsable", path }));
-        assertEquals(0, statusCode);
-        assertEquals(
-                path + ":3:3:hyphens:warning:too many spaces after hyphen" + System.lineSeparator(),
-                std.toString());
+        assertThat(statusCode).isEqualTo(0);
+        assertThat(std.toString()).isEqualTo(path + ":3:3:hyphens:warning:too many spaces after hyphen" + System.lineSeparator());
     }
 
     @Test
-    void testConfData2() throws Exception {
+    void confData2() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "cli5.yml";
 
         Cli cli = new Cli();
@@ -232,14 +225,12 @@ class CliTest {
 
         int statusCode = catchSystemExit(() ->
                 cli.run(new String[] { "-d", "\"rules:\n  hyphens:\n    max-spaces-after: 1\"", "-f", "parsable", path }));
-        assertEquals(1, statusCode);
-        assertEquals(
-                path + ":3:3:hyphens:error:too many spaces after hyphen" + System.lineSeparator(),
-                std.toString());
+        assertThat(statusCode).isEqualTo(1);
+        assertThat(std.toString()).isEqualTo(path + ":3:3:hyphens:error:too many spaces after hyphen" + System.lineSeparator());
     }
 
     @Test
-    void testConfFile() throws Exception {
+    void confFile() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "cli5.yml";
 
         Cli cli = new Cli();
@@ -249,14 +240,12 @@ class CliTest {
 
         int statusCode = catchSystemExit(() ->
                 cli.run(new String[] { "-f", "parsable", "-c", "src" + File.separator + "test" + File.separator + "resources" + File.separator + "config" + File.separator + "XDG" + File.separator + "yamllint" + File.separator + "config", path }));
-        assertEquals(0, statusCode);
-        assertEquals(
-                path + ":2:8:comments:warning:too few spaces before comment" + System.lineSeparator(),
-                std.toString());
+        assertThat(statusCode).isEqualTo(0);
+        assertThat(std.toString()).isEqualTo(path + ":2:8:comments:warning:too few spaces before comment" + System.lineSeparator());
     }
 
     @Test
-    void testParsableFormat() throws Exception {
+    void parsableFormat() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "cli1.yml";
 
         Cli cli = new Cli();
@@ -265,15 +254,13 @@ class CliTest {
         cli.setStdOutputStream(std);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-f", "parsable", path }));
-        assertEquals(1, statusCode);
-        assertEquals(
-                new HashSet<>(Arrays.asList(path + ":2:8:comments:warning:too few spaces before comment",
-                        path + ":3:16::error:syntax error: mapping values are not allowed here")),
-                new HashSet<>(Arrays.asList(std.toString().trim().split(System.lineSeparator()))));
+        assertThat(statusCode).isEqualTo(1);
+        assertThat(new HashSet<>(Arrays.asList(std.toString().trim().split(System.lineSeparator())))).isEqualTo(new HashSet<>(Arrays.asList(path + ":2:8:comments:warning:too few spaces before comment",
+                path + ":3:16::error:syntax error: mapping values are not allowed here")));
     }
 
     @Test
-    void testGitHubFormat() throws Exception {
+    void gitHubFormat() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "cli1.yml";
 
         Cli cli = new Cli();
@@ -282,7 +269,7 @@ class CliTest {
         cli.setStdOutputStream(std);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-f", "github", path }));
-        assertEquals(1, statusCode);
+        assertThat(statusCode).isEqualTo(1);
         assertEquals(
                 new HashSet<>(Arrays.asList("::warning file=" + path + ",line=2,col=8::[comments] too few spaces before comment",
                         "::error file=" + path + ",line=3,col=16::syntax error: mapping values are not allowed here")),
@@ -290,7 +277,7 @@ class CliTest {
     }
 
     @Test
-    void testColoredOutput() throws Exception {
+    void coloredOutput() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "cli5.yml";
 
         Cli cli = new Cli();
@@ -299,16 +286,14 @@ class CliTest {
         cli.setStdOutputStream(std);
 
         int statusCode = catchSystemExit(() -> cli.run(new String[]{"-f", "colored", "-d", "relaxed", path}));
-        assertEquals(0, statusCode);
-        assertEquals(
-                Format.ANSI_UNDERLINED + path + Format.ANSI_RESET + System.lineSeparator() +
-                        "  " + Format.ANSI_FAINT + "3:3" + Format.ANSI_RESET + "       " + Format.ANSI_YELLOW + "warning" + Format.ANSI_RESET +
-                        "  too many spaces after hyphen  " + Format.ANSI_FAINT + "(hyphens)" + Format.ANSI_RESET + System.lineSeparator() + System.lineSeparator(),
-                std.toString());
+        assertThat(statusCode).isEqualTo(0);
+        assertThat(std.toString()).isEqualTo(Format.ANSI_UNDERLINED + path + Format.ANSI_RESET + System.lineSeparator() +
+                "  " + Format.ANSI_FAINT + "3:3" + Format.ANSI_RESET + "       " + Format.ANSI_YELLOW + "warning" + Format.ANSI_RESET +
+                "  too many spaces after hyphen  " + Format.ANSI_FAINT + "(hyphens)" + Format.ANSI_RESET + System.lineSeparator() + System.lineSeparator());
     }
 
     @Test
-    void testGlobalConfig1() throws Exception {
+    void globalConfig1() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "cli5.yml";
 
         Cli cli = new Cli();
@@ -320,12 +305,12 @@ class CliTest {
                 withEnvironmentVariable("XDG_CONFIG_HOME", "src" + File.separator + "test" + File.separator + "resources" + File.separator + "config" + File.separator + "XDG").
                         execute(() -> cli.run(new String[] { "-f", "parsable", path }))
         );
-        assertEquals(0, statusCode);
-        assertEquals(path + ":2:8:comments:warning:too few spaces before comment" + System.lineSeparator(), std.toString());
+        assertThat(statusCode).isEqualTo(0);
+        assertThat(std.toString()).isEqualTo(path + ":2:8:comments:warning:too few spaces before comment" + System.lineSeparator());
     }
 
     @Test
-    void testGlobalConfig2() throws Exception {
+    void globalConfig2() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "cli5.yml";
 
         Cli cli = new Cli();
@@ -340,12 +325,12 @@ class CliTest {
                             cli.run(new String[]{"-f", "parsable", path});
                         }))
         );
-        assertEquals(1, statusCode);
-        assertEquals(path + ":3:3:hyphens:error:too many spaces after hyphen" + System.lineSeparator(), std.toString());
+        assertThat(statusCode).isEqualTo(1);
+        assertThat(std.toString()).isEqualTo(path + ":3:3:hyphens:error:too many spaces after hyphen" + System.lineSeparator());
     }
 
     @Test
-    void testGlobalConfig3() throws Exception {
+    void globalConfig3() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "cli5.yml";
 
         Cli cli = new Cli();
@@ -357,14 +342,12 @@ class CliTest {
                 withEnvironmentVariable("YAMLLINT_CONFIG_FILE", "src" + File.separator + "test" + File.separator + "resources" + File.separator + "config" + File.separator + "XDG" + File.separator + "yamllint" + File.separator + "config").
                         execute(() -> cli.run(new String[] { "-f", "parsable", path }))
         );
-        assertEquals(0, statusCode);
-        assertEquals(
-                path + ":2:8:comments:warning:too few spaces before comment" + System.lineSeparator(),
-                std.toString());
+        assertThat(statusCode).isEqualTo(0);
+        assertThat(std.toString()).isEqualTo(path + ":2:8:comments:warning:too few spaces before comment" + System.lineSeparator());
     }
 
     @Test
-    void testLocalConfig1() throws Exception {
+    void localConfig1() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "cli5.yml";
 
         Cli cli = new Cli();
@@ -372,17 +355,16 @@ class CliTest {
         ByteArrayOutputStream std = new ByteArrayOutputStream();
         cli.setStdOutputStream(std);
 
-        Files.copy(Paths.get("src", "test", "resources", "config", "local", Cli.USER_CONF_FILENAME), Paths.get(Cli.USER_CONF_FILENAME), StandardCopyOption.REPLACE_EXISTING);
+        Files.copy(Path.of("src", "test", "resources", "config", "local", Cli.USER_CONF_FILENAME), Path.of(Cli.USER_CONF_FILENAME), StandardCopyOption.REPLACE_EXISTING);
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-f", "parsable", path }));
-        assertEquals(1, statusCode);
-        assertEquals(
-                path + ":3:3:hyphens:error:too many spaces after hyphen" + System.lineSeparator(), std.toString());
+        assertThat(statusCode).isEqualTo(1);
+        assertThat(std.toString()).isEqualTo(path + ":3:3:hyphens:error:too many spaces after hyphen" + System.lineSeparator());
         // Need to restore user.home for the other tests
-        Files.delete(Paths.get(Cli.USER_CONF_FILENAME));
+        Files.delete(Path.of(Cli.USER_CONF_FILENAME));
     }
 
     @Test
-    void testLocalConfig2() throws Exception {
+    void localConfig2() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "cli5.yml";
 
         Cli cli = new Cli();
@@ -390,17 +372,16 @@ class CliTest {
         ByteArrayOutputStream std = new ByteArrayOutputStream();
         cli.setStdOutputStream(std);
 
-        Files.copy(Paths.get("src", "test", "resources", "config", "local", Cli.USER_CONF_FILENAME), Paths.get(Cli.USER_CONF_FILENAME + ".yaml"), StandardCopyOption.REPLACE_EXISTING);
+        Files.copy(Path.of("src", "test", "resources", "config", "local", Cli.USER_CONF_FILENAME), Path.of(Cli.USER_CONF_FILENAME + ".yaml"), StandardCopyOption.REPLACE_EXISTING);
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-f", "parsable", path }));
-        assertEquals(1, statusCode);
-        assertEquals(
-                path + ":3:3:hyphens:error:too many spaces after hyphen" + System.lineSeparator(), std.toString());
+        assertThat(statusCode).isEqualTo(1);
+        assertThat(std.toString()).isEqualTo(path + ":3:3:hyphens:error:too many spaces after hyphen" + System.lineSeparator());
         // Need to restore user.home for the other tests
-        Files.delete(Paths.get(Cli.USER_CONF_FILENAME + ".yaml"));
+        Files.delete(Path.of(Cli.USER_CONF_FILENAME + ".yaml"));
     }
 
     @Test
-    void testLocalConfig3() throws Exception {
+    void localConfig3() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "cli5.yml";
 
         Cli cli = new Cli();
@@ -408,17 +389,16 @@ class CliTest {
         ByteArrayOutputStream std = new ByteArrayOutputStream();
         cli.setStdOutputStream(std);
 
-        Files.copy(Paths.get("src", "test", "resources", "config", "local", Cli.USER_CONF_FILENAME), Paths.get(Cli.USER_CONF_FILENAME + ".yml"), StandardCopyOption.REPLACE_EXISTING);
+        Files.copy(Path.of("src", "test", "resources", "config", "local", Cli.USER_CONF_FILENAME), Path.of(Cli.USER_CONF_FILENAME + ".yml"), StandardCopyOption.REPLACE_EXISTING);
         int statusCode = catchSystemExit(() -> cli.run(new String[] { "-f", "parsable", path }));
-        assertEquals(1, statusCode);
-        assertEquals(
-                path + ":3:3:hyphens:error:too many spaces after hyphen" + System.lineSeparator(), std.toString());
+        assertThat(statusCode).isEqualTo(1);
+        assertThat(std.toString()).isEqualTo(path + ":3:3:hyphens:error:too many spaces after hyphen" + System.lineSeparator());
         // Need to restore user.home for the other tests
-        Files.delete(Paths.get(Cli.USER_CONF_FILENAME + ".yml"));
+        Files.delete(Path.of(Cli.USER_CONF_FILENAME + ".yml"));
     }
 
     @Test
-    void testListFiles() throws Exception {
+    void listFiles() throws Exception {
         String path = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "recursive" + File.separator;
 
         Cli cli = new Cli();
@@ -428,10 +408,8 @@ class CliTest {
 
         int statusCode = catchSystemExit(() ->
                 cli.run(new String[] { "--list-files", "-d", "{ignore: \".*" + File.separator + "cli4.yml\"}", path }));
-        assertEquals(0, statusCode);
-        assertEquals(
-                new HashSet<>(Arrays.asList(path + "cli2.yml",
-                        path + "sub" + File.separator + "cli3.yaml")),
-                new HashSet<>(Arrays.asList(std.toString().trim().split(System.lineSeparator()))));
+        assertThat(statusCode).isEqualTo(0);
+        assertThat(new HashSet<>(Arrays.asList(std.toString().trim().split(System.lineSeparator())))).isEqualTo(new HashSet<>(Arrays.asList(path + "cli2.yml",
+                path + "sub" + File.separator + "cli3.yaml")));
     }
 }
